--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         </nav>
         <div class="menu_toggle">☰</div>
     </header>
-    <!--<section id="splash">
-        <img src="assets/splash.png" alt="splash">
-    </section>-->
+
+    <section id="splash"></section>
 
 
 
