--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#home">Home</a></li>
             </ul>
         </nav>
         <div class="menu_toggle">☰</div>
