--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
+    <div class="profile_icon">
+        <img src="assets/intialer.png" alt="ct">
+    </div>
     <nav>
         <ul>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
             <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
@@ -22,14 +24,18 @@
 
     <div class="rows">
         <div class="item">
-            <img src="assets/postmodern.png" alt="postmodern">
-            <img src="assets/aabar.png" alt="bar">
-            <img src="assets/aabar.png" alt="billede">
-            <img src="assets/aabar.png" alt="billede">
-            <img src="assets/aabar.png" alt="billede">
-            <img src="assets/aabar.png" alt="billede">
+            <img src="assets/responsivtsite.png" alt="postmodern">
+            <img src="assets/animationsopgave.png" alt="easterhunt">
+            <img src="assets/gruppeopg.png" alt="stopdeling">
+            <img src="assets/abar.png" alt="aabenbar">
+            <img src="assets/designsprint.png" alt="designsprint">
+            <img src="assets/webprototype.png" alt="webprototype">
+            <img src="assets/nativeapp.png" alt="battlezone">
+            <img src="assets/mig.png" alt="mig">
+
 
         </div>
+
     </div>
 
 
