--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -8,13 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <div class="profile_icon">
-        <img src="assets/intialer.png" alt="ct">
-    </div>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#hjem">Hjem</a></li>
+            <li><a href="#om">Om</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
