--- a/om.html
+++ b/om.html
@@ -17,13 +17,15 @@
     <div class="menu_toggle">☰</div>
 </header>
 
-<body>
-    <section id="om">
-        <div class="omwrapper">
-            <div class="omcontent">
+<body id="afarve">
+    <section id="about">
+        <div class="wrapper">
+            <div class="content">
+                <h2>Om Mig</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum fuga, dolor! Dolorem cupiditate accusantium, odit voluptas ea porro animi eos sed, minus ipsam natus vero, ad atque eaque sit officia.</p>
-                <img src="assets/Artboard%2036.png" alt="migg">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, qui veritatis expedita dolore iusto perspiciatis iure quod ducimus praesentium enim minima culpa repellat possimus eveniet aut quibusdam dolorem, laborum nulla.</p>
             </div>
+            <img src="assets/Artboard%2036.png" alt="migg">
 
         </div>
     </section>
