--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <nav>
             <ul>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#home">Home</a></li>
+                <li><a href="om.html">About</a></li>
             </ul>
         </nav>
         <div class="menu_toggle">☰</div>
