--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#hjem">Hjem</a></li>
-            <li><a href="#om">Om</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="om.html">About</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
