--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,9 @@
 
     <div class="rows">
         <div class="item">
-            <img src="assets/responsivtsite.png" alt="postmodern">
-            <img src="assets/animationsopgave.png" alt="easterhunt">
+            <a href="responsivt.html"><img src="assets/responsivtsite.png" alt="postmodern"></a>
+
+            <a href="animation.html"><img src="assets/animationsopgave.png" alt="easterhunt"></a>
             <img src="assets/gruppeopg.png" alt="stopdeling">
             <img src="assets/abar.png" alt="aabenbar">
             <img src="assets/designsprint.png" alt="designsprint">
