--- a/responsivt.html
+++ b/responsivt.html
@@ -11,60 +11,264 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="om.html">About</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
 </header>
 
 <body>
-
-    <section id="responsivt">
-        <div class="section_wrapper">
-            <div class="content">
-                <h1>Tema 1 Grundlæggende HTML</h1> <br>
-                <p>01.04.02 - responsive_site_v2</p>
-                <p>Værktøjer der er blevet brugt</p>
-                <p>Photoshop</p>
-                <p>Illustrater</p>
-                <p>XD</p>
-                <p>html5</p>
-                <p>css3</p>
-                <p>Dette var vores første opgave vi lavde, da vi startede på Københavns Erhvervserkadermi (Kea). Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Street Art’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for Street Art. Vi fandt hurtigt ud af at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
+    <section id="color">
+        <section id="tema">
+            <div class="sectionwrapper">
+                <h1>Tema2 Grundlæggende animation</h1>
+                <h2>03.03.04.Aniamtions Opgave</h2>
+                <h2>Værktøjer brugt</h2>
+                <li>Html5</li>
+                <li>css3</li>
+                <li>javascript</li>
+                <li>Illustrator</li>
+                <h2>Link til spil </h2>
+                <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/02-animation/spil/" target="_blank">Link</a></p>
 
             </div>
-            <img src="assets/mood.png" alt="mood">
-        </div>
+        </section>
+
+
+        <section id="koncept">
+            <div class="sectionwrapper">
+                <h1>Beskrivelse af koncept og ide</h1>
+                <h2>Faglige mål</h2>
+                <p>vores mål i tema 2 var at lære og forstå css og javascript. Vi skulle lære at lave et spil fra start til slut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, harum sapiente, assumenda debitis magni impedit excepturi maiores obcaecati. Dolores voluptate enim, unde nostrum? Eum magnam debitis dicta veniam perspiciatis autem.
+                </p>
+                <h2> Spil Pitch</h2>
+                <p>Påskeharen har været på spil, og har gemt 10 påskeæg rundt i skoven. Hjælp haren med at indsamle de 10 påskeæg, men vær på vagt, for der popper bomber frem, som giver strafpoint.</p>
+
+                <h2>Koncept & Plan</h2>
+                <p> Vores formål ved at arbejde med aabenbar, er at hjælpe dem med at re-designe deres hjemmeside ift. deres egen branding, målsætninger og ambitioner ved at give dem et bud på hvordan deres egen vision kombineret med vores input kan skabe et nyt og anderledes udtryk end hvad de har i forvejen, og forhåbentligt hjælpe dem med at få et klart og personligt udtryk igennem til kunder.
+
+                    <img src="assets/mood-kopi.png" alt="bold">
+
+
+
+            </div>
+        </section>
+
+        <section id="analyse">
+            <div class="sectionwrapper">
+                <h1>Analyse af nuværende Website</h1>
+                <h2>Analyse</h2>
+                <p>Budskabet der bliver udsendt fra deres hjemmeside, strider umiddelbart en smule imod hvordan selve baren ser ud. Abenbar præsentere sig selv via deres hjemmeside, som en meget minimalistisk cocktailbar, hvor der bliver serveret mad, hvor det mest af alt i virkeligheden, minder om et klassisk brunt bodega.</p>
+
+                <h2>Fotostil</h2>
+                <p>Abenbars fotostil strider imod den vibe, som de gerne vil skabe. De bruger sløret close-up billeder mad elementer som citroner, radisser og coctails som ikke er fra baren. De prøver at skabe en stemning af fin-resturent, som strider overens med den vibe, som er på baren.
+
+                </p>
+
+
+                <h2>Styletile</h2>
+                <div class="top">
+                    <div class="colleft">
+                        <figure>
+                            <img src="assets/mood-kopi.png">
+                            <figcaption>Styletile </figcaption>
+                        </figure>
+                        <figure>
+                            <img src="assets/mood-kopi.png" alt="DDDDDDDD">
+                            <figcaption>Wireframe Web </figcaption>
+                        </figure>
+                    </div>
+                    <div class="colright">
+                        <figure>
+                            <img src="assets/mood-kopi.png">
+                            <figcaption>Wireframe Mobile</figcaption>
+                        </figure>
+                    </div>
+                </div>
+
+                <h2>Test</h2>
+                <p>For at finde ud af hvad brugerne tænker om det nuværende webiste, har vi gennemført både en BERT test og en 5 sekunder test. Herunder er resultatet af vores test.</p>
+                <div class="top">
+                    <div class="colleft50">
+                        <h3>BERT</h3>
+                        <figure>
+                            <img src="assets/mood-kopi.png" alt="DDDDDDDD">
+                            <figcaption>Resultat af BERT test</figcaption>
+                        </figure>
+                    </div>
+                    <div class="colright50">
+                        <h3>5 sekunder</h3>
+                        <p class="five-sec-person"><strong>Testperson 1</strong></p>
+                        <p class="five-sec-answer"><em>Synes det virker meget moderne, lækkert og lyst. Det er nok en cocktailbar</em></p>
+
+                        <p class="five-sec-person"><strong>Testperson 2</strong></p>
+                        <p class="five-sec-answer"><em>Tror det er en café med mulighed for at få en drink eller to. Tænker det er noget af det samme som dalle valle eller vivaldi.</em></p>
+
+                        <p class="five-sec-person"><strong>Testperson 3</strong></p>
+                        <p class="five-sec-answer"><em>Forventer det er et sted hvor der er gode kaffe og drinks muligheder. Synes siden er pæn men meget simpel.</em></p>
+
+                        <p class="five-sec-person"><strong>Testperson 4</strong></p>
+                        <p class="five-sec-answer"><em>Tænker der er tale om et sted med flotte drinks og sund og frisk mad, et sted man kan drikke en kop kaffe en formiddag med en frisk salat til, eller komme en aften og drikke en drink eller et glas vin. Lys og indbydende stemning.</em></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="dokumentation">
+            <div class="sectionwrapper">
+                <h1>Dokumentation til virksomhedsvideo</h1>
+                <h2>Interviewguide - Spørgsmål til Aabenbar</h2>
+                <ul>
+                    <li> Hvorfor/hvordan besluttede du/i jer for, at opkøbe Fluesmækkeren, og gøre det til Aabenbar?</li>
+                    <li>Hvad er Aabenbar?</li>
+                    <li>Hvad er jeres/din vision for, hvordan baren ender med at se ud?</li>
+                    <li>Hvad er jeres baggrund?</li>
+                    <li> Hvor mange er i om baren?</li>
+                    <li>Hvem leder aabenbar?</li>
+                    <li>Hvilke roller har i hver især?</li>
+                    <li>Hvad har i lavet tidligere / inden i startede aabenbar</li>
+                    <li>Hvad er jeres vision for aabenbar?</li>
+                    <li>Hvilke ændringere har du i tankerne, der skal foretages i en nær fremtid?</li>
+                    <li>Hvilke renovationer har i foretaget siden i overtog åbenbar?</li>
+                    <li>Har i andre renovationer planlagt?</li>
+                    <li>Hvilke events tilbyder i her på aabenbar?</li>
+                    <li>Hvad gør jer unikke/specielle?</li>
+                    <li>I siger i har tænkt jer at køre en form for bistro, hvad for noget mad har i tænkt jer at putte på menuen?</li>
+                    <li> Hvordan adskiller i jer fra andre barer/caféer?</li>
+                    <li>Hvilke udfordringer har i haft i forbindelse med åbningen af aabenbar?</li>
+                    <li>Hvad har i som næste projekt?</li>
+                    <li>Hvilken målgruppe prøver i at tiltrække?</li>
+                    <li>Er der nogen kunder i ikke er ligeså interesserede i?</li>
+                    <li>Hvordan føler i at i er blevet modtaget efter rebrandingen?</li>
+                    <li>Hvad synes i om jeres nuværende lokation i København?</li>
+                    <li> Ville i gerne være tættere på centrum? Hvorfor?</li>
+                    <li> Hvordan ser aabenbar ud som færdiggjort projekt?</li>
+                    <li> I har umiddelbart et meget bredt fokusområde/koncept, hvilke problematikker har der været med at skabe sammenhæng imellem cocktails, morgenmad/frokost, sportsbar og billiard?</li>
+                </ul>
+                <p><em>Interviewet er slut.</em></p>
+                <ul>
+                    <li>Hvad tænker du om det der er blevet sagt, har du noget du ønsker at tilføje, eller nogle tanker vi ikke er kommet ind på endnu?</li>
+                </ul>
+                <h2>Storyboard</h2>
+                <p><a href="https://docs.google.com/document/d/1oxvnhk1qclIbXXsPgDlR1zS45JBHQnnup6NmMyW8TiY/edit" target="_blank">Beskrivelse af storyboard</a></p>
+                <figure>
+                    <img src="assets/mood-kopi.png" alt="DDDDDDDD">
+                    <figcaption>Storyboard</figcaption>
+                </figure>
+            </div>
+        </section>
+
+
+        <section id="redesign">
+            <div class="sectionwrapper">
+                <h1>Udkast til redesign</h1>
+
+                <figure>
+                    <img src="assets/mood-kopi.png" alt="DDDDDDDD">
+                    <figcaption>Styletile</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="assets/mood-kopi.png" alt="DDDDDDDD">
+                    <figcaption>Wireframe</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="assets/mood-kopi.png">
+                    <figcaption>Layoutdiagram</figcaption>
+                </figure>
+
+            </div>
+        </section>
+
+        <section id="responsive-video">
+            <div class="sectionwrapper">
+                <h1>Responsiv video</h1>
+                <!-- video -->
+                <div id="video-container">
+                    <video id="video" width="640" height="365">
+                        <source src="aabenbar.mp4" type="video/mp4">
+                        <p>Your browser doesn't support HTML5 video.
+                            <a href="aabenbar.mp4">Download</a> the video instead.
+                        </p>
+                    </video>
+                    <!-- Video Controls -->
+                    <div id="video-controls">
+                        <button type="button" id="play-pause">Play</button>
+                        <input type="range" id="seek-bar" value="0">
+                        <button type="button" id="mute">Mute</button>
+                        <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+                        <button type="button" id="full-screen">Full-Screen</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="kodning">
+            <div class="sectionwrapper">
+                <h1>HTML eksempel med tilhørende CSS</h1>
+                <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
+                <img src="kodee.png" alt="kode">
+
+
+            </div>
+        </section>
+
+        <section id="test">
+            <div class="sectionwrapper">
+                <h1>Test resultater</h1>
+                <img src="docs.google.com_forms_d_19D5EI_FRXxnuqJaBxERJY1do2pAIeA8rJLqABVc4J6E_edit.png" alt="gg">
+
+                <h2>BERT</h2>
+                <h2>5 sekunder ny test</h2>
+                <p>Hvad er dit første indtryk af siden?
+                    <br>
+                    Logoet, Stranger Things.
+                    <br>
+                    Hvad handler siden om?
+                    <br>
+                    Bar, Bodega, Spillecafé.
+                    <br>
+                    Beskriv siden med et ord, Cozy vibe, rustik, moderne, Sci-fy, Traditionel, Natteliv.
+                    <br>
+                    Hvilken stemning fanger du?
+                    <br>
+                    Cozy, mørke læderstole, Hyggelig, Cool, Natclub
+
+
+
+                </p>
+                <h2>Lighthouse Audit</h2>
+                <!-- minimum 3 billedoptimeringer -->
+                <img src="assets/mood-kopi.png" alt="test">
+            </div>
+        </section>
+
+        <section id="reflektion">
+            <div class="sectionwrapper">
+                <h1>Reflektion</h1>
+                <!-- I refleksions-afsnittet vil vi gerne have, at I beskriver jeres redesign løsning med de fagudtryk, I har lært indenfor uddannelsens områder. Her kan I med fordel anvende de samme kriterier, som I brugte til at analysere den eksisterende løsning. Vi vil også gerne have en beskrivelse af jeres proces og de eventuelle vanskeligheder, I er stødt på undervejs. -->
+                <p>Vores vision med redesignet var at skabe en sammenhæng mellem værtshuset og deres hjemmeside. Så man får den barstemning, når man besøger deres nye hjemmeside som er på selve værtshuset, istedet for den cafe stemning, som var der før. I forhold til vores design proces, så lavde vi et trello board, med alle vores task, så vi havde et overblik over hvilke ting vi skulle have færdigt. vi har haft små udfordringer undervejs, bla. så har vi ikke fået git hub til at fungere, det har skabt nolge frustationer undervejs i koden. Da man kun kunne kode en af gangen. vi gik efter at skabe en simple men stilfuld hjemmeside,hvor man får den hyggelige barstemning. </p>
+            </div>
+        </section>
+
+        <!-- TILFØJ SEKTION HVIS: Hvis I bruger kode fra andre sites, ex. Menu eller gallery, skal i beskrive hvor I har hentet koden, samt hvordan I har implementeret den. -->
+
+        <section id="git">
+            <div class="sectionwrapper">
+                <h1>GIT versions historik</h1>
+                <!-- Skærmdump af Git versions historik -->
+                <img src="assets/mood-kopi.png" alt="bla">
+
+            </div>
+        </section>
+        <script src="videoscript.js"></script>
+        <footer>
+
+        </footer>
     </section>
-
-
-
-
-
-
-
-
-    <!--<section id="forside_page">
-        <div class="sectionwrapper">
-            <div class="col">
-                <h1>Tema 1 Grundlæggende HTML</h1> <br>
-                <p>01.04.02 - responsive_site_v2</p>
-                <p>Værktøjer der er blevet brugt</p>
-                <p>Photoshop</p>
-                <p>Illustrater</p>
-                <p>XD</p>
-                <p>html5</p>
-                <p>css3</p>
-                <p>Dette var vores første opgave vi lavde, da vi startede på Københavns Erhvervserkadermi (Kea). Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Street Art’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for Street Art. Vi fandt hurtigt ud af at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
-
-            </div>
-            <div class="forsidesplah">
-                <img src="assets/mood.png" alt="moodboard">
-
-            </div>
-        </div>
-    </section>-->
 
 
 
