--- a/animation.html
+++ b/animation.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <header>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="om.html">About</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
