--- a/om.html
+++ b/om.html
@@ -10,8 +10,8 @@
 <header>
     <nav>
         <ul>
-            <li><a href="#hjem">Hjem</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="index.html">Hjem</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
     <div class="menu_toggle">☰</div>
