--- a/animation.html
+++ b/animation.html
@@ -41,7 +41,7 @@
             <div class="sectionwrapper">
                 <h1>Beskrivelse af koncept og ide</h1>
                 <h2>Faglige mål</h2>
-                <p>vores mål i tema 2 var at lære og forstå css og javascript. Vi skulle lære at lave et spil fra start til slut. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, harum sapiente, assumenda debitis magni impedit excepturi maiores obcaecati. Dolores voluptate enim, unde nostrum? Eum magnam debitis dicta veniam perspiciatis autem.
+                <p>I denne opgave blev vi introduceret til css og javascript. Jeg valgte at bruge javascript til at løse den efterføglende opgave. Nemlig at kode vores eget spil fra start til slut. Jeg valgte at andvende x løsning frem for en anden fordi.....
                 </p>
                 <h2> Spil Pitch</h2>
                 <p>Påskeharen har været på spil, og har gemt 10 påskeæg rundt i skoven. Hjælp haren med at indsamle de 10 påskeæg, men vær på vagt, for der popper bomber frem, som giver strafpoint.</p>
