--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,8 @@
             <a href="responsivt.html"><img src="assets/responsivtsite.png" alt="postmodern"></a>
 
             <a href="animation.html"><img src="assets/animationsopgave.png" alt="easterhunt"></a>
-            <img src="assets/gruppeopg.png" alt="stopdeling">
+
+            <a href="sexsamfund.html"><img src="assets/gruppeopg.png" alt="stopdeling"></a>
             <img src="assets/abar.png" alt="aabenbar">
             <img src="assets/designsprint.png" alt="designsprint">
             <img src="assets/webprototype.png" alt="webprototype">
