--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,15 @@
             <a href="animation.html"><img src="assets/animationsopgave.png" alt="easterhunt"></a>
 
             <a href="sexsamfund.html"><img src="assets/gruppeopg.png" alt="stopdeling"></a>
-            <img src="assets/abar.png" alt="aabenbar">
-            <img src="assets/designsprint.png" alt="designsprint">
+
+            <a href="aabenbar.html"><img src="assets/abar.png" alt="aabenbar"></a>
+
+            <a href="aabenbar.html"><img src="assets/designsprint.png" alt="designsprint"></a>
+
             <img src="assets/webprototype.png" alt="webprototype">
+
             <img src="assets/nativeapp.png" alt="battlezone">
+
             <img src="assets/mig.png" alt="mig">
 
 
