--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
 
             <a href="aabenbar.html"><img src="assets/abar.png" alt="aabenbar"></a>
 
-            <a href="aabenbar.html"><img src="assets/designsprint.png" alt="designsprint"></a>
+            <a href="designsprint.html"><img src="assets/designsprint.png" alt="designsprint"></a>
 
-            <img src="assets/webprototype.png" alt="webprototype">
+            <a href="webprotorype.html"><img src="assets/webprototype.png" alt="webprototype"></a>
 
-            <img src="assets/nativeapp.png" alt="battlezone">
+            <a href="nativeapp.html"><img src="assets/nativeapp.png" alt="battlezone"></a>
 
-            <img src="assets/mig.png" alt="mig">
+            <a href="om.html"><img src="assets/mig.png" alt="mig"></a>
 
 
         </div>
