--- a/webprotorype.html
+++ b/webprotorype.html
@@ -25,14 +25,16 @@
         <section id="tema">
             <div class="sectionwrapper">
                 <h1>Tema4 Grundlæggende UX</h1>
-                <h2>04.01.01 Design Sprint</h2>
+                <h2>04.02.01 Web protorype</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
-                <li>css3</li>
-                <li>javascript</li>
+                <li>Css3</li>
+                <li>Javascript</li>
                 <li>XD</li>
-                <h2>Link til egen prototype </h2>
-                <p>Kan ses her: <a href="https://xd.adobe.com/view/c4f58569-7e84-49a4-7172-bd85a6f19977-b2c4/?fullscreen" target="_blank">Link</a></p>
+                <h2>Link til webprototype </h2>
+                <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/04-ux/webprototype/login.html" target="_blank">Link</a></p>
+                <h2>Link til Trello </h2>
+                <p>Kan ses her: <a href="https://trello.com/b/sSDPQo41/web-prototype" target="_blank">Link</a></p>
 
 
 
@@ -53,29 +55,35 @@
 
         <section id="dokumentation">
             <div class="sectionwrapper">
-                <h1>Design dokumentation</h1>
-                <h2>Moodboard Inspiration</h2>
-                <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
-                <img src="assets/dyr.png" alt="dyr">
-                <h2>Produktions skitser</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ea, et voluptatem amet rerum, explicabo sapiente. Velit sequi laudantium modi maxime minus ad, voluptate officia. Iste aspernatur molestiae reprehenderit, fugit?</p>
-                <img src="assets/skitserani.png" alt="skitse">
-                <img src="assets/produktionskitse.png" alt="skitser">
+                <h1>Udvalgte kodeforklaringer</h1>
+                <h2>Css Forside</h2>
+                <img src="assets/menukode.png" alt="kode">
+                <p>På denne side er der brugt grid- template-colums til at definerer hvor mange rækker der skal være. alle containerne har fået størrelsen 125px, (så hvert billede har den samme størrelse) på række 2 (techlounge og mail) har jeg brugt grid-colums: 1/span 2: til at definerer størrelse på boksene og lokation. her 1/span 2: </p>
+                <h2>Drop-down menu Javascript</h2>
+                <img src="assets/aflkode.png" alt="kodedropmenu">
+                <p>Laver et klik, lytter på classen down.col som er (tema 1), som gør at vi kalder toggle assignment funktionen, når man klikker på .col inde i en .down. Derefter finder vi den klasse der har classen “down” som er rundt om “col” der er klikket på, og hhv. enten tilføjer eller fjerner classen open.
+                </p>
+
 
 
 
             </div>
         </section>
-
-        <section id="kodning">
+        <section id="dokumentation">
             <div class="sectionwrapper">
-                <h1>Javascript eksempel</h1>
-                <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
-                <img src="assets/kodeegg.png" alt="kode">
-                <img src="assets/kodebomb.png" alt="kode">
+                <h1>Interview Guide</h1>
+                <h2>Velkomst</h2>
+                <p>Hej og velkommen til vores test. Vi starter med nogle indledende spørgsmål, og så derefter en tænke-højt test hvor du meget gerne må sige hvad du gør, og hvorfor mens du klikker rundt i prototypen. </p>
+                <h2>Interview</h2>
+                <img src="assets/interview.png" alt="interview">
+                <img src="assets/interviews.png" alt="interviews">
+
+
+
+
+
             </div>
         </section>
-
 
 
         <footer>
