--- a/sexsamfund.html
+++ b/sexsamfund.html
@@ -25,15 +25,16 @@
         <section id="tema">
             <div class="sectionwrapper">
                 <h1>Tema2 Grundlæggende Animation</h1>
-                <h2>03.03.03 Animations opgave</h2>
+                <h2>02.05.03 Gruppeopgave sex og samfund</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
                 <li>css3</li>
                 <li>javascript</li>
                 <li>Illustrator</li>
                 <h2>Link til spil </h2>
-                <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/02-animation/spil/" target="_blank">Link</a></p>
-                <img src="assets/eastertest.png" alt="spil">
+                <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/02.04_projekt/" target="_blank">Link</a></p>
+                <h2>Link til Dokumentationsside </h2>
+                <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/gruppe-6_dokumentationssite/" target="_blank">Link</a></p>
 
 
             </div>
@@ -42,11 +43,9 @@
         <section id="koncept">
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
-                <h2>Formål</h2>
-                <p> Dette var vores første opgave, da vi startede på Københavns Erhvervs Akademi (KEA). Vi blev introduceret til de grundlæggende faglige begreber inden for design af digitale brugergrænseflader, her html og css. Samt indholdsproduktion, digital kommunikation og responsivt webdesign. Derudover fik vi de første hands-on færdigheder, inden for billedebehandling i photoshop, opsætning af tekst og billeder i adobe Indesign og Adobe XD.
-
-                    <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at benytte Html og css, til at kode min stilartside. Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
+                <h2>Kundecase</h2>
+                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
+                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Vores case gik ud på at vi skulle formidle privatsnak ud til folk.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde. Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med. Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.
 
             </div>
         </section>
@@ -55,12 +54,19 @@
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
-                <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
-                <img src="assets/dyr.png" alt="dyr">
+                <img src="assets/Artboard%2061.png" alt="mood">
                 <h2>Produktions skitser</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ea, et voluptatem amet rerum, explicabo sapiente. Velit sequi laudantium modi maxime minus ad, voluptate officia. Iste aspernatur molestiae reprehenderit, fugit?</p>
-                <img src="assets/skitserani.png" alt="skitse">
-                <img src="assets/produktionskitse.png" alt="skitser">
+                <p>Udarbedjdelse af spilskærm</p>
+                <img src="assets/skitsemobil.png" alt="mobil">
+                <img src="assets/haand.png" alt="skitse">
+                <h2>Diagrammer</h2>
+                <p>Aktivitetsdiagram</p>
+                <img src="assets/aktivitetsdiageam%20ss.png" alt="diagram">
+                <p>Burn down charts</p>
+                <img src="assets/burndown.png" alt="burndowm">
+                <h2>Finansering</h2>
+                <img src="assets/stopdeling.png" alt="stop">
+
 
 
 
@@ -69,7 +75,7 @@
 
         <section id="kodning">
             <div class="sectionwrapper">
-                <h1>Javascript eksempel</h1>
+                <h1>HTML & css kode eksempel</h1>
                 <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
                 <img src="assets/kodeegg.png" alt="kode">
                 <img src="assets/kodebomb.png" alt="kode">
