--- a/animation.html
+++ b/animation.html
@@ -55,12 +55,10 @@
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
                 <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
-                <img src="assets/dyr.png" alt="dyr">
+                <img src="assets/Artboard%2086.png" alt="dyr">
                 <h2>Produktions skitser</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ea, et voluptatem amet rerum, explicabo sapiente. Velit sequi laudantium modi maxime minus ad, voluptate officia. Iste aspernatur molestiae reprehenderit, fugit?</p>
-                <img src="assets/skitserani.png" alt="skitse">
-                <img src="assets/produktionskitse.png" alt="skitser">
-
+                <img src="assets/kanin.png" alt="pro">
+                <img src="assets/kaninoe.png" alt="oer">
 
 
             </div>
