--- a/designsprint.html
+++ b/designsprint.html
@@ -54,13 +54,12 @@
         <section id="dokumentation">
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
-                <h2>Moodboard Inspiration</h2>
-                <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
-                <img src="assets/dyr.png" alt="dyr">
-                <h2>Produktions skitser</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est ea, et voluptatem amet rerum, explicabo sapiente. Velit sequi laudantium modi maxime minus ad, voluptate officia. Iste aspernatur molestiae reprehenderit, fugit?</p>
-                <img src="assets/skitserani.png" alt="skitse">
-                <img src="assets/produktionskitse.png" alt="skitser">
+                <h2>Map</h2>
+                <img src="assets/map.png" alt="map">
+                <h2>Sketch</h2>
+                <img src="assets/prosketch.png" alt="skitse">
+                <h2>Storyboard</h2>
+                <img src="assets/storyboars.png" alt="skitser">
 
 
 
@@ -69,10 +68,9 @@
 
         <section id="kodning">
             <div class="sectionwrapper">
-                <h1>Javascript eksempel</h1>
-                <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
-                <img src="assets/kodeegg.png" alt="kode">
-                <img src="assets/kodebomb.png" alt="kode">
+                <h1>Evaluering</h1>
+                <h2>Jeg synes at lighting Demos fungerede bedst, da der var her vi skulle undersøge hvilke ting som fungerede bedst på apps og hjemmesider. De giver en god grundviden, om hvad der fungere og hvad der ikke gør? Jeg kunne godt lide at vi fik samlet alle vores ideer, som gav en god grundstruktur til at designe sin egen prototype. </h2>
+
             </div>
         </section>
 
