--- a/aabenbar.html
+++ b/aabenbar.html
@@ -41,223 +41,63 @@
         </section>
         <section id="koncept">
             <div class="sectionwrapper">
-                <h1>Beskrivelse af koncept & idé</h1>
-                <h2>Præmis</h2>
-                <p>Åbenbar er en bar som tilbyder alt fra middagskaffe og brætspil til cocktails og højt humør.
-                </p>
-                <h2>Log-line</h2>
-                <p>Åbenbar har siden November 2018 kombineret madlavning og cocktails med en traditionel værtshus-stemning. Vi undersøger deres opstart samt udvikling og inkorporering af diverse koncepter.</p>
+                <h1>Faglige Mål</h1>
+                <h2>Kundecase</h2>
+                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
+                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Vores case gik ud på at vi skulle formidle privatsnak ud til folk.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde. Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med. Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.
 
-                <h2>Koncept & Plan</h2>
-                <p> Vores formål ved at arbejde med aabenbar, er at hjælpe dem med at re-designe deres hjemmeside ift. deres egen branding, målsætninger og ambitioner ved at give dem et bud på hvordan deres egen vision kombineret med vores input kan skabe et nyt og anderledes udtryk end hvad de har i forvejen, og forhåbentligt hjælpe dem med at få et klart og personligt udtryk igennem til kunder.
-                </p>
-                <p>Vi vil snakke med dem om, hvad deres fremtidsplaner for baren er, og derefter hjælpe dem, ved at lave en hjemmeside, der pejler mod deres endelige mål og guide dem mod, den bar de gerne ende med at være.
-                </p>
+            </div>
+        </section>
 
-                <h2>Målgruppe</h2>
-                <p>Vi befinder os i en målgruppe der hedder 25-80 år. Beslutningen er grundet de forholdsvis høje priser, og de lidt finere drinks, som de reklamere meget for på deres instagram. Men Trods fine cocktails, så kan du også komme og få en lokal nørrebro øl.
-                </p>
-                <h2>Beskrivelse af process og postproduktion</h2>
-                <p> Som designdokumentation har valgt at lave et moodboard med inspirationsbilleder, ud fra fotografen Christina Ortega fotostil. Der har vi haft fokus på de mørke farve, med skarpe kontraster, når vi redigerer vores billeder. I processen med vores billedredigering, har vi valgt at bruge mørke kontraster og farver som sort, mørk rød, mørk, grøn. Derudover har vi brugt RGB farvekoder. Farve valgene er valgt ud fra aabenbars logo, så det passer i stil med hvilke farver man møder når man træder ind i baren.
+        <section id="dokumentation">
+            <div class="sectionwrapper">
+                <h1>Design dokumentation</h1>
+                <h2>Moodboard Inspiration</h2>
+                <img src="assets/Artboard%2061.png" alt="mood">
+                <h2>Produktions skitser</h2>
+                <p>Udarbedjdelse af spilskærm</p>
+                <img src="assets/skitsemobil.png" alt="mobil">
+                <img src="assets/haand.png" alt="skitse">
+                <h2>Diagrammer</h2>
+                <p>Aktivitetsdiagram</p>
+                <img src="assets/aktivitetsdiageam%20ss.png" alt="diagram">
+                <p>Burn down charts</p>
+                <img src="assets/burndown.png" alt="burndowm">
+                <h2>Finansering</h2>
+                <img src="assets/stopdeling.png" alt="stop">
 
-                </p>
-                <img src="assets/bold.png" alt="bold">
 
 
 
             </div>
         </section>
 
-        <section id="analyse">
+        <section id="kodning">
             <div class="sectionwrapper">
-                <h1>Analyse af nuværende Website</h1>
-                <h2>Analyse</h2>
-                <p>Budskabet der bliver udsendt fra deres hjemmeside, strider umiddelbart en smule imod hvordan selve baren ser ud. Abenbar præsentere sig selv via deres hjemmeside, som en meget minimalistisk cocktailbar, hvor der bliver serveret mad, hvor det mest af alt i virkeligheden, minder om et klassisk brunt bodega.</p>
-
-                <h2>Fotostil</h2>
-                <p>Abenbars fotostil strider imod den vibe, som de gerne vil skabe. De bruger sløret close-up billeder mad elementer som citroner, radisser og coctails som ikke er fra baren. De prøver at skabe en stemning af fin-resturent, som strider overens med den vibe, som er på baren.
-
-                </p>
-
-
-                <h2>Styletile</h2>
-                <div class="top">
-                    <div class="colleft">
-                        <figure>
-                            <img src="assets/styletile.jpg">
-                            <figcaption>Styletile </figcaption>
-                        </figure>
-                        <figure>
-                            <img src="assets/" alt="DDDDDDDD">
-                            <figcaption>Wireframe Web </figcaption>
-                        </figure>
-                    </div>
-                    <div class="colright">
-                        <figure>
-                            <img src="Billeder/Analyse/Mobile%20first.jpg" alt="DDDDDDDD">
-                            <figcaption>Wireframe Mobile</figcaption>
-                        </figure>
-                    </div>
-                </div>
-
-
-
-                <section id="dokumentation">
-                    <div class="sectionwrapper">
-                        <h1>Dokumentation til virksomhedsvideo</h1>
-                        <h2>Interviewguide - Spørgsmål til Aabenbar</h2>
-                        <ul>
-                            <li> Hvorfor/hvordan besluttede du/i jer for, at opkøbe Fluesmækkeren, og gøre det til Aabenbar?</li>
-                            <li>Hvad er Aabenbar?</li>
-                            <li>Hvad er jeres/din vision for, hvordan baren ender med at se ud?</li>
-                            <li>Hvad er jeres baggrund?</li>
-                            <li> Hvor mange er i om baren?</li>
-                            <li>Hvem leder aabenbar?</li>
-                            <li>Hvilke roller har i hver især?</li>
-                            <li>Hvad har i lavet tidligere / inden i startede aabenbar</li>
-                            <li>Hvad er jeres vision for aabenbar?</li>
-                            <li>Hvilke ændringere har du i tankerne, der skal foretages i en nær fremtid?</li>
-                            <li>Hvilke renovationer har i foretaget siden i overtog åbenbar?</li>
-                            <li>Har i andre renovationer planlagt?</li>
-                            <li>Hvilke events tilbyder i her på aabenbar?</li>
-                            <li>Hvad gør jer unikke/specielle?</li>
-                            <li>I siger i har tænkt jer at køre en form for bistro, hvad for noget mad har i tænkt jer at putte på menuen?</li>
-                            <li> Hvordan adskiller i jer fra andre barer/caféer?</li>
-                            <li>Hvilke udfordringer har i haft i forbindelse med åbningen af aabenbar?</li>
-                            <li>Hvad har i som næste projekt?</li>
-                            <li>Hvilken målgruppe prøver i at tiltrække?</li>
-                            <li>Er der nogen kunder i ikke er ligeså interesserede i?</li>
-                            <li>Hvordan føler i at i er blevet modtaget efter rebrandingen?</li>
-                            <li>Hvad synes i om jeres nuværende lokation i København?</li>
-                            <li> Ville i gerne være tættere på centrum? Hvorfor?</li>
-                            <li> Hvordan ser aabenbar ud som færdiggjort projekt?</li>
-                            <li> I har umiddelbart et meget bredt fokusområde/koncept, hvilke problematikker har der været med at skabe sammenhæng imellem cocktails, morgenmad/frokost, sportsbar og billiard?</li>
-                        </ul>
-                        <p><em>Interviewet er slut.</em></p>
-                        <ul>
-                            <li>Hvad tænker du om det der er blevet sagt, har du noget du ønsker at tilføje, eller nogle tanker vi ikke er kommet ind på endnu?</li>
-                        </ul>
-                        <h2>Storyboard</h2>
-                        <p><a href="https://docs.google.com/document/d/1oxvnhk1qclIbXXsPgDlR1zS45JBHQnnup6NmMyW8TiY/edit" target="_blank">Beskrivelse af storyboard</a></p>
-                        <figure>
-                            <img src="Billeder/Analyse/storyboard.jpg" alt="DDDDDDDD">
-                            <figcaption>Storyboard</figcaption>
-                        </figure>
-                    </div>
-                </section>
-
-
-                <section id="redesign">
-                    <div class="sectionwrapper">
-                        <h1>Udkast til redesign</h1>
-
-                        <figure>
-                            <img src="Billeder/styletile-80.jpg" alt="DDDDDDDD">
-                            <figcaption>Styletile</figcaption>
-                        </figure>
-
-                        <figure>
-                            <img src="Billeder/wireframes.png" alt="DDDDDDDD">
-                            <figcaption>Wireframe</figcaption>
-                        </figure>
-
-                        <figure>
-                            <img src="60006752_671425863318303_2897014359513366528_n.png" alt="DDDDDDDD">
-                            <figcaption>Layoutdiagram</figcaption>
-                        </figure>
-
-                    </div>
-                </section>
-
-                <section id="responsive-video">
-                    <div class="sectionwrapper">
-                        <h1>Responsiv video</h1>
-                        <!-- video -->
-                        <div id="video-container">
-                            <video id="video" width="640" height="365">
-                                <source src="aabenbar.mp4" type="video/mp4">
-                                <p>Your browser doesn't support HTML5 video.
-                                    <a href="aabenbar.mp4">Download</a> the video instead.
-                                </p>
-                            </video>
-                            <!-- Video Controls -->
-                            <div id="video-controls">
-                                <button type="button" id="play-pause">Play</button>
-                                <input type="range" id="seek-bar" value="0">
-                                <button type="button" id="mute">Mute</button>
-                                <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
-                                <button type="button" id="full-screen">Full-Screen</button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="kodning">
-                    <div class="sectionwrapper">
-                        <h1>HTML eksempel med tilhørende CSS</h1>
-                        <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
-                        <img src="kodee.png" alt="kode">
-
-
-                    </div>
-                </section>
-
-                <section id="test">
-                    <div class="sectionwrapper">
-                        <h1>Test resultater</h1>
-                        <img src="docs.google.com_forms_d_19D5EI_FRXxnuqJaBxERJY1do2pAIeA8rJLqABVc4J6E_edit.png" alt="gg">
-
-                        <h2>BERT</h2>
-                        <h2>5 sekunder ny test</h2>
-                        <p>Hvad er dit første indtryk af siden?
-                            <br>
-                            Logoet, Stranger Things.
-                            <br>
-                            Hvad handler siden om?
-                            <br>
-                            Bar, Bodega, Spillecafé.
-                            <br>
-                            Beskriv siden med et ord, Cozy vibe, rustik, moderne, Sci-fy, Traditionel, Natteliv.
-                            <br>
-                            Hvilken stemning fanger du?
-                            <br>
-                            Cozy, mørke læderstole, Hyggelig, Cool, Natclub
-
-
-
-                        </p>
-                        <h2>Lighthouse Audit</h2>
-                        <!-- minimum 3 billedoptimeringer -->
-                        <img src="Sk%C3%A6rmbillede%202019-05-09%20kl.%2017.30.21.png" alt="test">
-                    </div>
-                </section>
-
-                <section id="reflektion">
-                    <div class="sectionwrapper">
-                        <h1>Reflektion</h1>
-                        <!-- I refleksions-afsnittet vil vi gerne have, at I beskriver jeres redesign løsning med de fagudtryk, I har lært indenfor uddannelsens områder. Her kan I med fordel anvende de samme kriterier, som I brugte til at analysere den eksisterende løsning. Vi vil også gerne have en beskrivelse af jeres proces og de eventuelle vanskeligheder, I er stødt på undervejs. -->
-                        <p>Vores vision med redesignet var at skabe en sammenhæng mellem værtshuset og deres hjemmeside. Så man får den barstemning, når man besøger deres nye hjemmeside som er på selve værtshuset, istedet for den cafe stemning, som var der før. I forhold til vores design proces, så lavde vi et trello board, med alle vores task, så vi havde et overblik over hvilke ting vi skulle have færdigt. vi har haft små udfordringer undervejs, bla. så har vi ikke fået git hub til at fungere, det har skabt nolge frustationer undervejs i koden. Da man kun kunne kode en af gangen. vi gik efter at skabe en simple men stilfuld hjemmeside,hvor man får den hyggelige barstemning. </p>
-                    </div>
-                </section>
-
-                <!-- TILFØJ SEKTION HVIS: Hvis I bruger kode fra andre sites, ex. Menu eller gallery, skal i beskrive hvor I har hentet koden, samt hvordan I har implementeret den. -->
-
-                <section id="git">
-                    <div class="sectionwrapper">
-                        <h1>GIT versions historik</h1>
-                        <!-- Skærmdump af Git versions historik -->
-                        <img src="Sk%C3%A6rmbillede%202019-05-09%20kl.%2015.27.55.png" alt="bla">
-
-                    </div>
-                </section>
+                <h1>HTML & css kode eksempel</h1>
+                <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
+                <img src="assets/kodeegg.png" alt="kode">
+                <img src="assets/kodebomb.png" alt="kode">
+            </div>
         </section>
 
 
 
+        <footer>
+
+        </footer>
+    </section>
 
 
 
-        <script src="script.js"></script>
+    </section>
+
+
+
+
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
