--- a/aabenbar.html
+++ b/aabenbar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>animation</title>
+    <title>aabenbar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -52,19 +52,14 @@
         <section id="dokumentation">
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
-                <h2>Moodboard Inspiration</h2>
-                <img src="assets/Artboard%2061.png" alt="mood">
-                <h2>Produktions skitser</h2>
-                <p>Udarbedjdelse af spilskærm</p>
-                <img src="assets/skitsemobil.png" alt="mobil">
-                <img src="assets/haand.png" alt="skitse">
-                <h2>Diagrammer</h2>
-                <p>Aktivitetsdiagram</p>
-                <img src="assets/aktivitetsdiageam%20ss.png" alt="diagram">
-                <p>Burn down charts</p>
-                <img src="assets/burndown.png" alt="burndowm">
-                <h2>Finansering</h2>
-                <img src="assets/stopdeling.png" alt="stop">
+                <h2>Storeboard</h2>
+                <img src="assets/storyboard.jpg" alt="mood">
+                <h2>Stiletile</h2>
+                <img src="assets/styletile.jpg" alt="style">
+                <h2>Lighthouse Demos</h2>
+                <img src="assets/lightdemos.png" alt="mobil">
+                <h2>wires</h2>
+                <img src="assets/wireframes.png" alt="wire">
 
 
 
@@ -74,12 +69,18 @@
 
         <section id="kodning">
             <div class="sectionwrapper">
-                <h1>HTML & css kode eksempel</h1>
-                <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
-                <img src="assets/kodeegg.png" alt="kode">
-                <img src="assets/kodebomb.png" alt="kode">
+                <h1>video javascript</h1>
+
+                <img src="assets/kodevideo.png" alt="kode">
+                <img src="assets/mute.png" alt="kode">
+                <img src="assets/fullscreen.png" alt="kode">
+                <img src="assets/seekbar.png" alt="seek">
             </div>
         </section>
+
+
+
+
 
 
 
@@ -90,7 +91,7 @@
 
 
 
-    </section>
+
 
 
 
