--- a/animation.html
+++ b/animation.html
@@ -55,7 +55,7 @@
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
                 <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
-                <img src="assets/Artboard%2086.png" alt="dyr">
+                <img src="assets/Artboard86.png" alt="dyr">
                 <h2>Produktions skitser</h2>
                 <img src="assets/kanin.png" alt="pro">
                 <img src="assets/kaninoe.png" alt="oer">
