--- a/om.html
+++ b/om.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>om</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
@@ -25,7 +25,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum fuga, dolor! Dolorem cupiditate accusantium, odit voluptas ea porro animi eos sed, minus ipsam natus vero, ad atque eaque sit officia.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, qui veritatis expedita dolore iusto perspiciatis iure quod ducimus praesentium enim minima culpa repellat possimus eveniet aut quibusdam dolorem, laborum nulla.</p>
             </div>
-            <img src="assets/Artboard%2036.png" alt="migg">
+            <img src="assets/Artboard36.png" alt="migg">
 
         </div>
     </section>
