--- a/sexsamfund.html
+++ b/sexsamfund.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>animation</title>
+    <title>Sex og Samfund</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -54,7 +54,7 @@
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
-                <img src="assets/Artboard%2061.png" alt="mood">
+                <img src="assets/Artboard61.png" alt="mood">
                 <h2>Produktions skitser</h2>
                 <p>Udarbedjdelse af spilskærm</p>
                 <img src="assets/skitsemobil.png" alt="mobil">
