--- a/nativeapp.html
+++ b/nativeapp.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>animation</title>
+    <title>Native App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
