--- a/animation.html
+++ b/animation.html
@@ -24,15 +24,19 @@
         <section id="tema">
             <div class="sectionwrapper">
                 <h1>Tema2 Grundlæggende Animation</h1>
-                <h2>03.03.03 Animations opgave</h2>
+                <h2>03.03.04 Animations opgave</h2>
                 <h2>Værktøjer brugt</h2>
                 <li>Html5</li>
                 <li>css3</li>
                 <li>javascript</li>
                 <li>Illustrator</li>
+                <li>Audition</li>
                 <h2>Link til spil </h2>
                 <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/02-animation/spil/" target="_blank">Link</a></p>
+                <h2> spil Pitch</h2>
+                <p>Påskeharen har været på spil, og har gemt 10 påskeæg rundt i skoven. Hjælp haren med at indsamle de 10 påskeæg, men vær på vagt, for der popper bomber frem, som giver strafpoint.</p>
                 <img src="assets/eastertest.png" alt="spil">
+
 
 
             </div>
@@ -42,10 +46,7 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Dette var vores første opgave, da vi startede på Københavns Erhvervs Akademi (KEA). Vi blev introduceret til de grundlæggende faglige begreber inden for design af digitale brugergrænseflader, her html og css. Samt indholdsproduktion, digital kommunikation og responsivt webdesign. Derudover fik vi de første hands-on færdigheder, inden for billedebehandling i photoshop, opsætning af tekst og billeder i adobe Indesign og Adobe XD.
-
-                    <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at benytte Html og css, til at kode min stilartside. Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
+                <p> I dette tema lærte viforskellige animationsteknikker, både visuelt og teknisk. Her,(Interaktivt spildesign baggrundsdesign, karakterdesign og grafisk spil) samt Javascript til at kode vores animationsspil i. Jeg valgte at bruge programmet adobe illustrater til at designe mine karakter og spilskærme.
 
             </div>
         </section>
@@ -54,11 +55,13 @@
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
-                <p>Jeg har valgt at tage udganspunkt i fald design, og i kunstnern Regina Nikiforova.</p>
+                <p> løbet af den første uge fik vi undervisning i karakter-design, Storyboard og scenograf. Vi fik vist en masse video eksempler på både karakter-design og scenografi. Efterfølgende fik vi tid til at reflektere og tegne de karakterer der skulle være med. Jeg gik ud fra nogle af de karaktertræk som vi havde fået vist tidligere i undervisningen som inspiration, da jeg skulle til at designe mine egen karakter. Jeg vidste at jeg ville designe mine figurer i flat design. Så jeg fandt en kunstner som inspirationskilde, til mine designs.(Regina Nikiforova)
+                    Jeg skitserede en lille rund figur,(kanin) i en god og ond undgave. </p>
                 <img src="assets/Artboard86.png" alt="dyr">
                 <h2>Produktions skitser</h2>
                 <img src="assets/kanin.png" alt="pro">
                 <img src="assets/kaninoe.png" alt="oer">
+
 
 
             </div>
