--- a/nativeapp.html
+++ b/nativeapp.html
@@ -37,6 +37,7 @@
                 <p>Kan ses her: <a href="https://xd.adobe.com/view/4db0715c-9b2c-4c29-7e66-6dc4a60776c7-3b81/?fbclid=IwAR0_1zU9FJm-d8HG-Vu0mgLaBWI6u8jSXUZ2GRx4So08JlptMEGci9TLp-g" target="_blank">Link</a></p>
                 <h2>Link til præsentation</h2>
                 <p>Kan ses her: <a href="https://docs.google.com/presentation/d/1hdqCuDywaRx-Dpc-k7j6ubrYjLIiuu0lIzxPWESp9Ho/edit?fbclid=IwAR3dMeo9U-fYGzLsGDDJhAVM1PL54QALduhxqExfTcnExexkP3FhsrHNBeo#slide=id.g59533e0494_5_5" target="_blank">Link</a></p>
+                <img src="assets/forsideb.png" alt="battle">
 
 
 
