--- a/sexsamfund.html
+++ b/sexsamfund.html
@@ -35,6 +35,7 @@
                 <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/02.04_projekt/" target="_blank">Link</a></p>
                 <h2>Link til Dokumentationsside </h2>
                 <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/gruppe-6_dokumentationssite/" target="_blank">Link</a></p>
+                <img src="assets/forsidep.png" alt="forside">
 
 
             </div>
@@ -75,10 +76,11 @@
 
         <section id="kodning">
             <div class="sectionwrapper">
-                <h1>HTML & css kode eksempel</h1>
+                <h1>Javaskript kode eksempel </h1>
                 <!-- udvælg og forklar minimum ét interessant HTML-eksempel med tilhørende CSS  -->
-                <img src="assets/kodeegg.png" alt="kode">
-                <img src="assets/kodebomb.png" alt="kode">
+                <img src="assets/tumsupkode.png" alt="kode">
+
+
             </div>
         </section>
 
