--- a/webprotorype.html
+++ b/webprotorype.html
@@ -35,6 +35,7 @@
                 <p>Kan ses her: <a href="http://cathrinethoegersen.dk/kea/04-ux/webprototype/login.html" target="_blank">Link</a></p>
                 <h2>Link til Trello </h2>
                 <p>Kan ses her: <a href="https://trello.com/b/sSDPQo41/web-prototype" target="_blank">Link</a></p>
+                <img src="assets/forsidec.png" alt="web">
 
 
 
